--- a/DatingApp/API/appsettings.json
+++ b/DatingApp/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=.;Database=DatingStore;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
