--- a/DatingApp/client/angular.json
+++ b/DatingApp/client/angular.json
@@ -67,6 +67,12 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "ssl": true,
+            "sslKey": "./ssl/server.key",
+            "sslCert": "./ssl/server.crt",
+            "browserTarget": "test:build"
+          },
           "configurations": {
             "production": {
               "browserTarget": "client:build:production"
