Adding JWT generation ability

--- a/DatingApp/API/appsettings.json
+++ b/DatingApp/API/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "Default": "Server=.;Database=DatingStore;Integrated Security=True"
   },
+  "TokenKey": "My Super secret key which generate the JWTs",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
