Adding photo upload functionality

--- a/DatingApp/API/appsettings.json
+++ b/DatingApp/API/appsettings.json
@@ -1,14 +1,15 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=.;Database=DatingStore;Integrated Security=True"
-  },
-  "TokenKey": "My Super secret key which generate the JWTs",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CloudinarySettings": {
+    "CloudName": "hafez2cloud",
+    "ApiKey": "931653585726665",
+    "ApiSecret": "nI50SKev4Sr2WXH6CcM-CyfLBVA"
   },
   "AllowedHosts": "*"
 }
