--- a/DatingApp/API/appsettings.Development.json
+++ b/DatingApp/API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=.;Database=DatingStore;Integrated Security=True"
+  },
+  "TokenKey": "My Super secret key which generate the JWTs",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
